# pywechat

./: .gitignore  CLAUDE.md  README.md  install.py  pywinauto使用方法.ipynb  requirements.txt  start_test.py  启动抢答.py
archived/: test4.ipynb
config/: group_keyword_forwarder.example.json  group_keyword_forwarder.json  known_answers.example.json  known_answers.json  rush_event.json  rush_event.yaml  rush_runtime_env.json  sns_click_offsets.example.json
docs/: README.md  deploy_guide.md  feed_refresh_listener_guide.md  fork_sync_guide.md  group_keyword_forwarder_guide.md  hook_comment_research.md  hook_flow_overview.md  hook_parallel_investigation_2026-02-12.md  hook_performance_notes.md  hook_progress.md  hook_vs_http_comparison.md  implementation_guide.md  moments_dump_guide.md  moments_rush_guide.md  multi_comment_listener_guide.md  operation_guide.md  overall_flowchart.md  phase0_final_summary.md  phase0_final_verification.md  phase0_hook_success.md  target_goal_gap.md  testing_dataset_guide.md  tls_crash_analysis.md
examples/: benchmark_ark_vision_params.py  build_local_ocr_ai_testset.py  collect_friend_moments_questions.py  collect_friend_moments_questions_verbose.py  (+11 more)
hook/: CMakeLists.txt
hook/src/: dllmain.cpp  hook_manager.cpp  hook_manager.h  pipe_server.cpp  pipe_server.h  sig_scanner.cpp  sig_scanner.h  sns_comment.cpp  sns_comment.h  sns_moments.cpp  sns_moments.h  sns_moments_poc.cpp  sns_moments_poc.h  version_check.cpp  version_check.h
hook/tools/: _read_rtti.js  ida_find_sns.py  memory_scanner.py  run_hook_candidates.py  sig_migrate.py  vtable_scanner.py  xref_finder.py
(+117 files in other folders)
